<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:label="@string/actionbar_title"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- to do add logo to app -->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/bologo" />
        <!-- to do  add buttons for login and register -->
        <Button
            android:id="@+id/login"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:onClick="gotoLoginCred"

            android:text="@string/login" />

        <Button
            android:id="@+id/registerbutton"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:onClick="gotoRegisteration"
            android:text="@string/register" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>