<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Registration"
    android:label="@string/actionbar_title"
    android:background="@color/colorWhite">
<!--To scroll  the app horizontally or vertically -->
    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:scrollbars="horizontal|vertical">
            <!-- add tablelayout to hold textviews and edittexts -->
            <TableLayout
                android:id="@+id/table"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:stretchColumns="0"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:adjustViewBounds="true"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/logo" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"  
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="254dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <EditText
                        android:id="@+id/firstnamevalue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:maxLines="1" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="254dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <EditText
                        android:id="@+id/lastnamevalue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:maxLines="1"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="254dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
<!--Date Picker For adding Date Format to Registration Form -->
                    <DatePicker
                        android:id="@+id/datepicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:tooltipText="Date of Birth"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:visibility="visible"
                        ></DatePicker>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="read_date"
                        android:background="@color/colorWhite"
                        android:src="@drawable/ic_date_range_maroon_24dp"></ImageButton>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="254dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <EditText
                        android:id="@+id/emailvalue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:maxLines="1"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="254dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >
                    <EditText
                        android:id="@+id/passwordvalue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:maxLines="1"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    >
                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    >
                    <Button
                        android:id="@+id/registerbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="registerUser"
                        android:text="@string/register_button_label"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>