<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Credential"
    android:label="@string/actionbar_title"
    android:background="@color/colorWhite">
    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/colorWhite">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:scrollbars="horizontal|vertical">

            <!-- add tablelayout to hold textviews and edittexts -->
            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/bayout_hrz"
                        android:contentDescription="@string/app_name" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:labelFor="@id/et_login_email"
                        android:text="@string/login_id_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/et_login_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:autofillHints="" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/password"
                        android:labelFor="@id/et_login_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:autofillHints="" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/tv_lc_errmsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimary"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <Button
                        android:id="@+id/loginbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="loginUser"
                        android:text="@string/login_button_label"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <Button
                        android:id="@+id/bt_lc_forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Forgot Password?"
                        android:textColor="@color/linkColor"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />
                </TableRow>
            </TableLayout>


        </HorizontalScrollView>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
