<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:label="@string/actionbar_title"
    android:orientation="vertical"
    tools:context=".LandingPage">


    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/colorWhite"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:stretchColumns="0"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="gotoBuy"
                            android:text="Sign Recognition" />

                        <!--<Button
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="gotoSell"
                            android:text="Sell" />

                        <Button
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="gotoRent"
                            android:text="Rent" />-->

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/bayout_hrz" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <TextView
                        android:id="@+id/tv_rules"
                        style="@android:style/Widget.DeviceDefault.TextView"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="50dp"
                        android:text="@string/game_rules"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"></TextView>

                </TableRow>

            </TableLayout>


        </HorizontalScrollView>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
